<resources>
    <string name="error_place_holder">Error Happend.Try again!</string>
    <string name="timeout_error">Quá thời gian kết nối máy chủ</string>
    <string name="lable_forget_password">Quên / Đổi mật khẩu</string>
    <string name="lable_register_account"><u>Đăng ký tài khoản</u></string>
    <string name="lable_title">Sức khoẻ trong tầm tay</string>
    <string name="lable_title_another_login">Hoặc đăng nhập qua:</string>
    <string name="btn_login_with_zalo">Đăng nhập với Zalo</string>
    <string name="btn_login_with_facebook">Đăng nhập với Facebook</string>
    <string name="btn_login_with_Apple">Đăng nhập với Apple</string>
    <string name="btn_login_with_google">Đăng nhập với Google</string>
    <string name="lable_account">demo1@example.com</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="lable_password">Abcd!234</string>
    <string name="str_login_validate_user_name">Bạn chưa nhập tài khoản</string>
    <string name="error_400">HTTP 400 Bad Request</string>
    <string name="error_422">HTTP 422 Unprocessable Content</string>
    <string name="str_login_error_400">Đăng nhập thất bại. Vui lòng kiểm tra thông tin đăng nhập!</string>
    <string name="str_login_error_422">Email hoặc số điện thoại không hơp lệ.</string>
    <string name="str_empty_username">Bạn chưa nhập tài khoản</string>
    <integer name="activity_anim_duration">300</integer>
    <integer name="activity_anim_duration_out">500</integer>
    <string name="str_empty_password">Bạn chưa nhập password</string>
    <string name="str_empty_all">Vui lòng nhập tài khoản và mật khẩu</string>
    <string name="str_login_success">Đăng nhập thành công</string>
    <string name="error_receiving_api">Error Receiving Api</string>
    <string name="disconect">Không có kêt nối</string>
    <string name="btn_header_left_top">Hồ sơ bệnh án</string>
    <string name="btn_header_right_top">Liên hệ bác sĩ tư vấn</string>
    <string name="btn_header_left_bottom">Cập nhật kết quả xét nghiệp</string>
    <string name="btn_header_right_bottom">Đặt lịch khám</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_patient">Khám bệnh</string>
    <string name="title_test">Xét nghiệm</string>
    <string name="title_brief">Hồ sơ</string>
    <string name="title_account">Tài khoản</string>
    <string name="lable_name">Nguyễn Thu Hương</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lable_infectious_hepatitis">Truyền nhiễm - Viêm gan</string>
    <string name="label_endocrine_diabetes">Nội tiết - Đái tháo đường</string>
    <string name="label_heart_blood_pressure">Tim mạch - Huyết áp</string>
    <string name="label_tumor">Ung bướu</string>
    <string name="label_urinary_kidney">Thận - Tiết niệu</string>
    <string name="label_digestion">Tiêu hoá</string>
    <string name="label_musculoskeletal">Cơ xương khớp</string>
    <string name="label_Respiratory_copd">Hô hấp - COPD</string>
    <string name="lable_ear_nose_throat">Tai - Mủi - Họng</string>
    <string name="label_dentomaxillofacial">Răng - Hàm - Mặt</string>
    <string name="label_surgery">Ngoại khoa</string>
    <string name="title_highlights">Nổi bật</string>
    <string name="lable_notification">2</string>
    <string name="lable_specialist">Chuyên khoa</string>
    <string name="lable_service">Dịch vụ</string>
    <string name="lable_kham_suc_khoe_co_quan">Khám sức khoẻ cơ quan</string>
    <string name="lable_cham_soc_y_te">Chăm sóc y tế tại nhà</string>
    <string name="lable_lay_mau">Lấy máu tại nhà</string>
    <string name="lable_tam_soat_ung_thu">Tầm soát ung thư</string>
    <string name="lable_kham_tong_quat">Khám tổng quát</string>
    <string name="dialog_title_my_pref">my_pref_login</string>
    <string name="dialog_title_key_pref">Save_pref_login</string>
    <string name="lable_Logged">Chào mừng trở lại</string>
    <string name="tab_status_tablayout">status</string>
    <string name="lable_text_kqxt_mau">KQXT Máu</string>
    <string name="lable_test_file">File đính kèm</string>
    <string name="lable_test_image">Ảnh</string>
    <string name="url_storage">http://hsba-v2.beetechdev.vn:1680/storage/</string>
    <string name="lable_delete">Xoá</string>
    <string name="text_ThS">ThS</string>
    <string name="text_TS">TS</string>
    <string name="settext_tien_si">Tiến sỹ</string>
    <string name="settext_thac_si">Thạc sỹ</string>
    <string name="lable_cm">cm</string>
    <string name="lable_kg">kg</string>
    <string name="btn_update">Cập nhật</string>
    <string name="hint_diagnostic">Chuẩn đoán</string>
    <string name="hint_blood">Nhóm máu</string>
    <string name="weight">Cân nặng</string>
    <string name="hint_height">Chiều cao</string>
    <string name="lable_address">Tầng 4, Toà nhà H10, Số 2 ngõ 475, Thanh Xuân, Hà Nội</string>
    <string name="lable_male">Nam</string>
    <string name="lable_birthday">24 / 04 / 1986</string>
    <string name="lable_female">Nữ</string>
    <string name="lable_other">Khác</string>
    <string name="title_health">Thông tin sức khoẻ</string>
    <string name="title_individual">Thông tin cá nhân</string>
    <string name="title_create_profile">Tạo Hồ sơ</string>
    <string name="lable_phone">0979 017 899</string>
    <string name="lable_add_new">Tạo mới</string>
    <string name="medical_examination_history">Lịch sử khám bệnh</string>
    <string name="lable_day">30 / 11 / 2001</string>
    <string name="lable_list_patient">Danh sách lịch khám</string>
    <string name="lable_blood_group">Nhóm máu</string>
    <string name="lable_offline">Trực tiếp</string>
    <string name="lable_online">Trực tuyến</string>
    <string name="lable_title_account">Tài khoản</string>
    <string name="lable_create_account">Thiết lập tài khoản</string>
    <string name="lable_history_account">Lịch sử hoạt đông</string>
    <string name="label_create_app">Thiết lập ứng dụng</string>
    <string name="label_logout">Đăng xuất</string>
    <string name="label_canceled">Đã huỷ</string>
    <string name="lable_address_user">ĐC: Toà H10, 477 Nguyễn Trãi</string>
    <string name="label_detailed_phone">ĐT: 0979 017 899</string>
    <string name="label_dortor_name">Bsi. Thân Mạnh Hùng</string>
    <string name="label_doctor_service">Phó trưởng khoa cấp cứu</string>
    <string name="label_detailed_time">11:00 - 11:30</string>
    <string name="label_detailed_note"><u>Ghi chú:</u></string>
    <string name="see_medical_examination_results">Xem kết quả khám bênh</string>
    <string name="label_detailed_medical_examination">Chi tiết lịch đã khám</string>
    <string name="label_update_medical_exammination">CẬP NHẬT KQKB</string>
    <string name="label_update_if_any">cập nhật KQXN, chụp chiếu (nếu có)</string>
    <string name="label_update_medical_examination">Huỷ đặt lịch khám</string>
    <string name="label_order_medical_examination">Chi tiết đăt lịch khám</string>
    <string-array name="Spinner">
        <item>Việt Nam</item>
        <item>Ấn Độ</item>
        <item>Hoa Kỳ</item>
        <item>Indonesia</item>
        <item>Trung Quốc</item>
    </string-array>
</resources>
